docs/api/qiskit/0.19/qiskit.circuit.library.SGate.mdx
---
title: SGate (v0.19)
description: API reference for qiskit.circuit.library.SGate in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.library.SGate
---

# SGate

<Class id="qiskit.circuit.library.SGate" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/circuit/library/standard_gates/s.py" signature="SGate(label=None)" modifiers="class">
  Single qubit S gate (Z\*\*0.5).

  It induces a $\pi/2$ phase, and is sometimes called the P gate (phase).

  This is a Clifford gate and a square-root of Pauli-Z.

  **Matrix Representation:**

$$
\begin{split}S = \begin{pmatrix}
1 & 0 \\
0 & i
\end{pmatrix}\end{split}
$$

  **Circuit symbol:**

  ```python
       ┌───┐
  q_0: ┤ S ├
       └───┘
  ```

  Equivalent to a $\pi/2$ radian rotation about the Z axis.

  Create new S gate.

  ## Attributes

  <span id="sgate-decompositions" />

  ### decompositions

  <Attribute id="qiskit.circuit.library.SGate.decompositions">
    Get the decompositions of the instruction from the SessionEquivalenceLibrary.
  </Attribute>

  <span id="sgate-definition" />

  ### definition

  <Attribute id="qiskit.circuit.library.SGate.definition">
    Return definition in terms of other basic gates.
  </Attribute>

  <span id="sgate-label" />

  ### label

  <Attribute id="qiskit.circuit.library.SGate.label" attributeTypeHint="str">
    Return gate label

    **Return type**

    `str`
  </Attribute>

  <span id="sgate-params" />

  ### params

  <Attribute id="qiskit.circuit.library.SGate.params">
    return instruction params.
  </Attribute>

  ## Methods

  <span id="sgate-add-decomposition" />

  ### add\_decomposition

  <Function id="qiskit.circuit.library.SGate.add_decomposition" signature="SGate.add_decomposition(decomposition)">
    Add a decomposition of the instruction to the SessionEquivalenceLibrary.
  </Function>

  <span id="sgate-assemble" />

  ### assemble

  <Function id="qiskit.circuit.library.SGate.assemble" signature="SGate.assemble()">
    Assemble a QasmQobjInstruction

    **Return type**

    [`Instruction`](qiskit.circuit.Instruction "qiskit.circuit.instruction.Instruction")
  </Function>

  <span id="sgate-broadcast-arguments" />

  ### broadcast\_arguments

  <Function id="qiskit.circuit.library.SGate.broadcast_arguments" signature="SGate.broadcast_arguments(qargs, cargs)">
    Validation and handling of the arguments and its relationship.

    For example, `cx([q[0],q[1]], q[2])` means `cx(q[0], q[2]); cx(q[1], q[2])`. This method yields the arguments in the right grouping. In the given example:

    ```python
    in: [[q[0],q[1]], q[2]],[]
    outs: [q[0], q[2]], []
          [q[1], q[2]], []
    ```

    The general broadcasting rules are:

    > *   If len(qargs) == 1:
    >
    >     ```python
    >     [q[0], q[1]] -> [q[0]],[q[1]]
    >     ```
    >
    > *   If len(qargs) == 2:
    >
    >     ```python
    >     [[q[0], q[1]], [r[0], r[1]]] -> [q[0], r[0]], [q[1], r[1]]
    >     [[q[0]], [r[0], r[1]]]       -> [q[0], r[0]], [q[0], r[1]]
    >     [[q[0], q[1]], [r[0]]]       -> [q[0], r[0]], [q[1], r[0]]
    >     ```
    >
    > *   If len(qargs) >= 3:
    >
    >     ```python
    >     [q[0], q[1]], [r[0], r[1]],  ...] -> [q[0], r[0], ...], [q[1], r[1], ...]
    >     ```

    **Parameters**

    *   **qargs** (`List`) – List of quantum bit arguments.
    *   **cargs** (`List`) – List of classical bit arguments.

    **Return type**

    `Tuple`\[`List`, `List`]

    **Returns**

    A tuple with single arguments.

    **Raises**

    **CircuitError** – If the input is not valid. For example, the number of arguments does not match the gate expectation.
  </Function>

  <span id="sgate-c-if" />

  ### c\_if

  <Function id="qiskit.circuit.library.SGate.c_if" signature="SGate.c_if(classical, val)">
    Add classical condition on register classical and value val.
  </Function>

  <span id="sgate-control" />

  ### control

  <Function id="qiskit.circuit.library.SGate.control" signature="SGate.control(num_ctrl_qubits=1, label=None, ctrl_state=None)">
    Return controlled version of gate. See [`ControlledGate`](qiskit.circuit.ControlledGate "qiskit.circuit.ControlledGate") for usage.

    **Parameters**

    *   **num\_ctrl\_qubits** (`Optional`\[`int`]) – number of controls to add to gate (default=1)
    *   **label** (`Optional`\[`str`]) – optional gate label
    *   **ctrl\_state** (`Union`\[`int`, `str`, `None`]) – The control state in decimal or as a bitstring (e.g. ‘111’). If None, use 2\*\*num\_ctrl\_qubits-1.

    **Returns**

    Controlled version of gate. This default algorithm uses num\_ctrl\_qubits-1 ancillae qubits so returns a gate of size num\_qubits + 2\*num\_ctrl\_qubits - 1.

    **Return type**

    [qiskit.circuit.ControlledGate](qiskit.circuit.ControlledGate "qiskit.circuit.ControlledGate")

    **Raises**

    **QiskitError** – unrecognized mode or invalid ctrl\_state
  </Function>

  <span id="sgate-copy" />

  ### copy

  <Function id="qiskit.circuit.library.SGate.copy" signature="SGate.copy(name=None)">
    Copy of the instruction.

    **Parameters**

    **name** (*str*) – name to be given to the copied circuit, if None then the name stays the same.

    **Returns**

    **a copy of the current instruction, with the name**

    updated if it was provided

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="sgate-inverse" />

  ### inverse

  <Function id="qiskit.circuit.library.SGate.inverse" signature="SGate.inverse()">
    Return inverse of S (SdgGate).
  </Function>

  <span id="sgate-is-parameterized" />

  ### is\_parameterized

  <Function id="qiskit.circuit.library.SGate.is_parameterized" signature="SGate.is_parameterized()">
    Return True .IFF. instruction is parameterized else False
  </Function>

  <span id="sgate-mirror" />

  ### mirror

  <Function id="qiskit.circuit.library.SGate.mirror" signature="SGate.mirror()">
    For a composite instruction, reverse the order of sub-gates.

    This is done by recursively mirroring all sub-instructions. It does not invert any gate.

    **Returns**

    a fresh gate with sub-gates reversed

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="sgate-power" />

  ### power

  <Function id="qiskit.circuit.library.SGate.power" signature="SGate.power(exponent)">
    Creates a unitary gate as gate^exponent.

    **Parameters**

    **exponent** (*float*) – Gate^exponent

    **Returns**

    To which to\_matrix is self.to\_matrix^exponent.

    **Return type**

    [qiskit.extensions.UnitaryGate](qiskit.extensions.UnitaryGate "qiskit.extensions.UnitaryGate")

    **Raises**

    **CircuitError** – If Gate is not unitary
  </Function>

  <span id="sgate-qasm" />

  ### qasm

  <Function id="qiskit.circuit.library.SGate.qasm" signature="SGate.qasm()">
    Return a default OpenQASM string for the instruction.

    Derived instructions may override this to print in a different format (e.g. measure q\[0] -> c\[0];).
  </Function>

  <span id="sgate-repeat" />

  ### repeat

  <Function id="qiskit.circuit.library.SGate.repeat" signature="SGate.repeat(n)">
    Creates an instruction with gate repeated n amount of times.

    **Parameters**

    **n** (*int*) – Number of times to repeat the instruction

    **Returns**

    Containing the definition.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

    **Raises**

    **CircuitError** – If n \< 1.
  </Function>

  <span id="sgate-to-matrix" />

  ### to\_matrix

  <Function id="qiskit.circuit.library.SGate.to_matrix" signature="SGate.to_matrix()">
    Return a numpy.array for the S gate.
  </Function>
</Class>

